--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="toolBar_color">#212121</color>
     <color name="superDarkGrey">#141414</color>
     <color name="FabColor2">#cf8419</color>
+    <color name="blur_background">#B9000000</color>
 
 
 </resources>
