--- a/app/src/main/res/layout/month_year_picker.xml
+++ b/app/src/main/res/layout/month_year_picker.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/linearLayout4"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    >
 
     <TextView
         android:layout_width="wrap_content"
