--- a/app/src/main/res/layout/fragment_all_transactions.xml
+++ b/app/src/main/res/layout/fragment_all_transactions.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layoutDescription="@xml/fragment_all_transactions_scene"
-    tools:context=".fragments.transactions.AllTransactions">
+    tools:context=".fragments.transactions.AllTransactions.AllTransactions">
 
 
     <!-- Container_________________________________________________
