--- a/app/src/main/res/layout/fragment_micro_account_transactions.xml
+++ b/app/src/main/res/layout/fragment_micro_account_transactions.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout8"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.transactions.AllTransactions"
+    tools:context=".fragments.transactions.AllTransactions.AllTransactions"
     android:padding="15dp">
 
 
