--- a/app/src/main/res/layout/fragment_contract_new_sub_contract.xml
+++ b/app/src/main/res/layout/fragment_contract_new_sub_contract.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragments.microaccounts.ContractNewSubContract" >
+    tools:context=".fragments.stakeholders.contracts.ContractNewSubContract" >
 
     <LinearLayout
         android:layout_width="match_parent"
