--- a/app/src/main/res/layout/fragment_contract_subcontract.xml
+++ b/app/src/main/res/layout/fragment_contract_subcontract.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fragments.microaccounts.SubContractDisplay">
+    tools:context=".fragments.stakeholders.contracts.subcontracts.SubContractDisplay">
 
     <TextView
         android:id="@+id/subcontract_amount"
