--- a/app/src/main/res/layout/fragment_micro_account_contracts.xml
+++ b/app/src/main/res/layout/fragment_micro_account_contracts.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="15dp"
-    tools:context=".fragments.microaccounts.MicroAccountContracts">
+    tools:context=".fragments.stakeholders.contracts.ContractsList">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecViewContracts"
