--- a/app/src/main/res/layout/fragment_micro_account_view_holder.xml
+++ b/app/src/main/res/layout/fragment_micro_account_view_holder.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragments.microaccounts.MicroAccountViewPagerHolder">
+    tools:context=".fragments.stakeholders.common.StakeholderViewPageHolder">
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPagerHolder"
