--- a/app/src/main/res/layout/bottom_menu_all_transactions.xml
+++ b/app/src/main/res/layout/bottom_menu_all_transactions.xml
@@ -2,89 +2,106 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:paddingHorizontal="20dp"
-    android:paddingVertical="5dp"
+    android:paddingVertical="20dp"
+    android:layout_marginTop="10dp"
     android:orientation="vertical"
-    android:background="@color/rec_view_gray"
     >
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/bs_layout_transaction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/bs_layout_transaction"
-        android:paddingVertical="10dp"
-        android:orientation="horizontal"
-        >
+        android:paddingVertical="15dp">
 
         <ImageView
             android:id="@+id/bs_icon_transaction"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="35dp"
+            android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_radio_button_checked_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:ignore="VectorDrawableCompat" />
+
         <TextView
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="30dp"
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Transactions"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:textColor="@color/white"
-            android:textSize="25sp"
-            android:layout_marginStart="30dp" />
-    </LinearLayout>
-    <LinearLayout
+            android:layout_marginLeft="20dp"
+            app:layout_constraintBottom_toBottomOf="@+id/bs_icon_transaction"
+            app:layout_constraintStart_toEndOf="@+id/bs_icon_transaction"
+            app:layout_constraintTop_toTopOf="@+id/bs_icon_transaction"
+            android:layout_marginStart="20dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/bs_layout_Receivables"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/bs_layout_Receivables"
-        android:paddingVertical="10dp"
-        android:orientation="horizontal"
+        android:paddingVertical="15dp"
         >
 
         <ImageView
-            android:id="@+id/bs_icon_receivables"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:id="@+id/icon_receivable"
+            android:layout_width="35dp"
+            android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_radio_button_unchecked_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:ignore="VectorDrawableCompat" />
+
         <TextView
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="30dp"
-            android:id="@+id/textView84"
+            android:id="@+id/textView83"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Receivables"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            android:layout_marginStart="30dp" />
-    </LinearLayout>
-    <LinearLayout
+            android:textSize="20sp"
+            android:layout_marginLeft="20dp"
+            app:layout_constraintBottom_toBottomOf="@+id/icon_receivable"
+            app:layout_constraintStart_toEndOf="@+id/icon_receivable"
+            app:layout_constraintTop_toTopOf="@+id/icon_receivable"
+            android:layout_marginStart="20dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/bs_layout_Payables"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/bs_layout_Payables"
-        android:paddingVertical="10dp"
-        android:orientation="horizontal"
-        >
+        android:paddingVertical="15dp"
+       >
 
         <ImageView
-            android:id="@+id/bs_icon_payables"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:id="@+id/icon_payable"
+            android:layout_width="35dp"
+            android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_radio_button_unchecked_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:ignore="VectorDrawableCompat" />
+
         <TextView
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="30dp"
-            android:id="@+id/textView82"
+            android:id="@+id/textViewe8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Payables"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            android:layout_marginStart="30dp" />
-    </LinearLayout>
+            android:text="Transactions"
+            android:textSize="20sp"
+            android:layout_marginLeft="20dp"
+            app:layout_constraintBottom_toBottomOf="@+id/icon_payable"
+            app:layout_constraintStart_toEndOf="@+id/icon_payable"
+            app:layout_constraintTop_toTopOf="@+id/icon_payable"
+            android:layout_marginStart="20dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
 
 
 
