--- a/app/src/main/res/layout/bottom_menu_all_transactions.xml
+++ b/app/src/main/res/layout/bottom_menu_all_transactions.xml
@@ -20,7 +20,7 @@
             android:id="@+id/bs_icon_transaction"
             android:layout_width="35dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_radio_button_checked_24"
+            app:srcCompat="@drawable/ic_baseline_radio_button_checked_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
