--- a/app/src/main/res/layout/fragment_micro_account_transactions.xml
+++ b/app/src/main/res/layout/fragment_micro_account_transactions.xml
@@ -5,30 +5,33 @@
     android:id="@+id/frameLayout8"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.transactions.AllTransactions.AllTransactions"
-    android:padding="15dp">
+    android:padding="0dp"
+    tools:context=".fragments.transactions.AllTransactions.AllTransactions">
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/RecViewTransactionsHolder"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btn_new_TransactionFAB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/settings"
-        app:backgroundTint="?attr/colorPrimary"
-        app:fabCustomSize="60dp"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/RecViewTransactionsHolder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="15dp">
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:maxImageSize="40dp"
-        app:srcCompat="@drawable/ic_baseline_add_24" />
+        </androidx.recyclerview.widget.RecyclerView>
+
+        <LinearLayout
+            android:id="@+id/coverLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.7"
+            android:background="@color/light_grey"
+            android:orientation="horizontal"
+            android:visibility="invisible" />
+
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
