ScheduledTransactions display done

--- a/app/src/main/res/layout/fragment_contract_subcontract.xml
+++ b/app/src/main/res/layout/fragment_contract_subcontract.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.stakeholders.contracts.subcontracts.SubContractDisplay">
+    tools:context=".fragments.stakeholders.contracts.SubContractDisplay">
 
     <TextView
         android:id="@+id/subcontract_amount"
@@ -51,4 +51,13 @@
         android:background="?android:attr/listDivider"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/subcontract_period" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/scheduledTransactions_rec_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/subonctract_divider" />
 </androidx.constraintlayout.widget.ConstraintLayout>
