--- a/app/src/main/res/layout/rec_view_scheduled_payments.xml
+++ b/app/src/main/res/layout/rec_view_scheduled_payments.xml
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="@string/paid_by"
+        android:text="@string/paid_to"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline5"
         app:layout_constraintTop_toBottomOf="@+id/text_title_allSchTrans" />
