Select category for subcontract

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -135,7 +135,11 @@
         android:id="@+id/chooseCategory"
         android:name="be.kuleuven.elcontador10.fragments.transactions.NewTransaction.Categories.ChooseCategory"
         android:label="fragment_choose_category"
-        tools:layout="@layout/fragment_choose_category" />
+        tools:layout="@layout/fragment_choose_category" >
+        <argument
+            android:name="newTransaction"
+            app:argType="boolean" />
+    </fragment>
     <fragment
         android:id="@+id/displayPhoto2"
         android:name="be.kuleuven.elcontador10.fragments.transactions.DisplayTransaction.DisplayPhoto"
