--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="rec_view_gray">#36393F</color>
     <color name="rec_view_transactions">#282828</color>
     <color name="rec_view_title">#eed075</color>
+    <color name="processed_transactions">#eed075</color>
     <color name="rec_view_negative_amount">#e4b31d</color>
     <color name="fb_color">#cfa219</color>
     <color name="text_titles">#e4b31d</color>
