--- a/app/src/main/res/layout/fragment_execute_scheduled_transaction.xml
+++ b/app/src/main/res/layout/fragment_execute_scheduled_transaction.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.transactions.ExecuteScheduledTransaction" >
+    tools:context=".fragments.transactions.scheduledTransaction.ExecuteScheduledTransaction" >
 
     <LinearLayout
         android:layout_width="match_parent"
